--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@vueuse/core": "^11.1.0",
     "axios": "^1.7.7",
+    "element-plus": "^2.8.4",
     "pinia": "^2.2.2",
     "pinia-persistedstate-plugin": "^0.1.0",
     "vue": "^3.4.29",
