--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "element-plus": "^2.8.4",
     "pinia": "^2.2.2",
     "pinia-persistedstate-plugin": "^0.1.0",
+    "qs": "^6.13.0",
     "vue": "^3.4.29",
     "vue-router": "^4.3.3"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.8.0",
+    "@types/qs": "^6.9.16",
     "@vitejs/plugin-vue": "^5.0.5",
     "@vue/eslint-config-prettier": "^9.0.0",
     "eslint": "^8.57.0",
