--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "pinia-persistedstate-plugin": "^0.1.0",
     "qs": "^6.13.0",
     "vue": "^3.4.29",
-    "vue-router": "^4.3.3"
+    "vue-router": "^4.3.3",
+    "vue3-puzzle-vcode": "^1.1.7"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.8.0",
